--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^27.0.6"
+    "gogocode": "^1.0.20",
+    "jest": "^27.0.6",
+    "jscodeshift": "^0.13.0"
   },
-  "dependencies": {
-    "gogocode": "^1.0.20"
-  }
+  "dependencies": {}
 }
